--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/coding-events
+spring.datasource.username=coding-events
+spring.datasource.password=admin098
 
+#Specify the DBMS
+spring.jpa.database = MYSQL
+
+#Show or not log for each sql query
+spring.jpa.show-sql = true
+
+#Hibernate ddl auto (create, create-drop, update)
+spring.jpa.hibernate.ddl-auto = update
+
+#User spring.jpa.properties.* for Hibernate native properties (the prefix is
+#stripped before adding them into the entity manager)
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
